[project]
name = "cmpt371-a3"
version = "0.1.0"
description = "CMPT371 Assignment 3 "
readme = "README.md"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
    "B",  # flake8-bugbear
]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
